@@ -38,6 +38,8 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1852: fixed wrong URL construction in webdav.davcmds
+
       - Collector #1844: fixed whitespace handling in the ZMI "Find" tab
 
       - Collector #1813: removed spurious inclusion of CMFBTreeFolder.
